# hakuna

./: .gitignore  README.md  punto_rojo.py  pyproject.toml  run_haku.py
docs/plans/: 2026-06-29-refactor-overlay-architecture.md  2026-06-30-integracion-gemini-respuestas-visuales.md  2026-06-30-overlay-4-rows.md
src/hakunamatata/: __init__.py  answers.py  cache.py  capture.py  detection.py  gemini.py  hud.py  mouse.py  overlay.py
src/hakunamatata/ui/: __init__.py  macos.py  windows.py
tests/: test_answers.py  test_capture_debug.py  test_gemini.py  test_overlay_layout.py
