[project]
name = "hakunamatata"
version = "0.1.0"
description = "Proyecto Python hakunamatata"
readme = "README.md"
authors = [
    { name = "Andres Gaibor", email = "androymartin99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyobjc-framework-cocoa>=12.2.1",
    "pyobjc-framework-quartz>=12.2.1",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
